2003-12-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Eugene S. Weiss has CVS write access now.
	* doc/descriptions/unsupported.desc: Added and updated some
	  scanners. 
	* tools/sane-find-scanner.c: Actually use the number of the alt
	  setting when printing descriptors. Fixes bug #300383 found by
	  Gerard Klaver.
	* backend/gt68xx.c backend/gt68xx_devices.c doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES:
	  Updated code for Genius Vivid 4x and Mustek ScanExpress A3 USB.
	  Added Genius Colorpage Vivid3 V2 and Googlegear 2000 as
	  supported devices.
	* backend/artec.c: Check for NULL before accessing a pointer. This
	  may fix a segmentation fault mentioned in bug #300339. Also a
	  compilation warning was fixed.

2003-12-13  Julien BLACHE <jb@jblache.org>
	* fronted/saned.c: use strcasecmp() instead of strcmp() when
	matching IPv6 addresses.

2003-12-12  Michael Herder  <crapsite at gmx.net>
	* backend/artec_eplus48u.c  backend/artec_eplus48u.h
	  backend/artec_eplus48u.conf: added experimental
	  support for the Artec E+ Pro
	  fixed sane-Bugs-300261 (doesn't compile when
	  NDEBUG is defined)

2003-12-09  Allan Noah <anoah at pfeiffer dot edu>
	* doc/desc/{fujitsu|ma1509}.desc: move fujitsu fi-4110eox2 section

2003-12-09  Allan Noah <anoah at pfeiffer dot edu>
	* backend/fujitsu.c: count USB packets to prevent timeouts, perhaps
          due to DATA0/1 toggle problems in certain scanners

2003-12-07  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure:  remove "enabling GPHOTO2"
	  messages printed by configure

2003-12-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added some scanners.

2003-12-06  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure:  gphoto2 backend is now 
	  enabled by default if gphoto2-config is found.   Use
	  "--with-gphoto2=no" to disable it.
